--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
   <groupId>org.roc</groupId>
   <artifactId>flink-support</artifactId>
-  <version>1.0</version>
+  <version>1.1-SNAPSHOT</version>
   <packaging>pom</packaging>
 
   <modules>
@@ -130,7 +130,7 @@
     <connection>scm:git:https://github.com/roc-wong/flink-support.git</connection>
     <url>https://github.com/roc-wong/flink-support.git</url>
     <developerConnection>scm:git:https://github.com/roc-wong/flink-support.git</developerConnection>
-    <tag>v1.0</tag>
+    <tag>HEAD</tag>
   </scm>
 
   <repositories>
